<resources>
    <string name="app_name">银丰陪诊</string>
    <string name="str_exit_title">退出</string>
    <string name="str_exit_content">您的帐号已在其它设备登录</string>
    <string name="str_ok">确定</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_psw_hint">输入密码</string>
    <string name="login_synccode">手机验证码登录</string>
    <string name="login_forgetpsw">忘记密码</string>
    <string name="login_toregist">没有账户？ 注册</string>
    <string name="login_login">登录</string>
    <string name="register_phone_hint">请输入手机号</string>
    <string name="register_psw_hint">请输入6-20位字母或数字密码</string>
    <string name="register_synccode_hint">请输入验证码</string>
    <string name="register_get_synccode">获取验证码</string>
    <string name="register_serviceandnotice">我已阅读并同意使用服务协议和隐私条款</string>
    <string name="register_register">注册</string>
    <string name="fillinfo_head">头像</string>
    <string name="fillinfo_name">真实姓名</string>
    <string name="fillinfo_name_hint">请输入姓名</string>
    <string name="fillinfo_gender">性别</string>
    <string name="fillinfo_ID">身份证号</string>
    <string name="fillinfo_necessary">必填</string>
    <string name="fillinfo_history">既往病史</string>
    <string name="fillinfo_complete">完成</string>
    <string name="hp_subscribleonline">点击在线预约</string>
    <string name="hp_serviceandquestion">服务详情和常见问题</string>
    <string name="subscribe_choose">就诊人</string>
    <string name="subscribe_phone_second">第二联系人电话</string>
    <string name="subscribe_service_time">服务时间</string>
    <string name="subscribe_service_time_tip1">注：1、基础服务时长为2小时，超时20元/小时 </string>
    <string name="subscribe_service_time_tip2"> 2、最早预约时间为当前时间后的两小时 </string>
    <string name="subscribe_time_start">开始时间</string>
    <string name="subscribe_time_end">结束时间</string>
    <string name="subscribe_hospital">医院</string>
    <string name="subscribe_hospital_choose">请选择要去的医院</string>
    <string name="subscribe_department">科室</string>
    <string name="subscribe_department_choose">请选择科室</string>
    <string name="subscribe_remark">备注：</string>
    <string name="subscribe_remark_hint">添加您的其他需求说明(100字以内)</string>
    <string name="subscribe_coupon">优惠券</string>
    <string name="subscribe_coupon_choose">选择优惠券</string>
    <string name="subscribe_service_price">服务价格</string>
    <string name="subscribe_total_count">合计</string>
    <string name="subscribe_cancelorder_tip">温馨提示：离预约时间2小时内取消订单，退款50%，2小时以外全退</string>
    <string name="subscribe_confirm_order">确认下单</string>
    <string name="name">姓名</string>
    <string name="name_input">请输入姓名</string>
    <string name="phone">手机号</string>
    <string name="phone_input">请输入手机号</string>
    <string name="ID">身份证</string>
    <string name="ID_input">请输入身份证号</string>
    <string name="tip_addpatient">陪诊服务中我们会为就诊人提供一份平安保险，请输入真实的身份信息（姓名、性别、身份证号码）信息有误会影响您的保险生效。
</string>
    <string name="orderpay_subscribe">在线预约</string>
    <string name="orderpay_orderpay">下单付款</string>
    <string name="orderpay_waitservice">等待服务</string>
    <string name="orderpay_servicing">服务进行</string>
    <string name="orderpay_confirmcomplete">确认完成</string>
    <string name="orderpay_comment">评价</string>
    <string name="orderpay_orderinfo">订单信息</string>
    <string name="orderpay_servicetime">服务时间:</string>
    <string name="orderpay_serviceaddress">服务地点:</string>
    <string name="orderpay_serviceask">服务要求:</string>
    <string name="orderpay_serviceprice">陪诊服务费</string>
    <string name="orderpay_coupon">优惠券抵扣</string>
    <string name="orderpay_finalprice">合计支付</string>
    <string name="orderpay_choosepaytype">选择支付方式</string>
    <string name="orderwaitservice_time_remain">离开始服务还剩</string>
    <string name="orderwaitservice_time_out">超过服务开始时间</string>
    <string name="orderserving_time_remain">离服务结束还剩</string>
    <string name="orderserving_time_out">服务已超时</string>
    <string name="ordercomment_attitude_hightest">非常满意</string>
    <string name="ordercomment_attitude_hight">满意</string>
    <string name="ordercomment_attitude_normal">一般</string>
    <string name="ordercomment_attitude_bad">不满意</string>
    <string name="ordercomment_attitude_badest">非常不满意</string>
    <string name="order_cancel_reason_waiter_later">陪诊员迟到</string>
    <string name="order_cancel_reason_plan_change">计划有变</string>
    <string name="order_price">订单价格</string>
    <string name="order_leval_1">非常差</string>
    <string name="order_leval_2">差</string>
    <string name="order_leval_3">一般</string>
    <string name="order_leval_4">好</string>
    <string name="order_leval_5">非常好</string>
    <string name="online_txt_no">暂无陪诊员在线，请耐心等待！</string>
    <string name="online_txt_has">已推送%1$d位陪诊员</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="mine_invite">邀请有礼</string>
    <string name="mine_coupon">优惠券</string>
    <string name="mine_set">设置</string>
    <string name="pay_zfb">支付宝支付</string>
    <string name="pay_wx">微信支付</string>
    <string name="pay_confirm">确认支付</string>
    <string name="umeng_socialize_sharetosina">分享到新浪微博</string>
    <string name="umeng_socialize_sharetodouban">分享到豆瓣</string>
    <string name="umeng_socialize_sharetorenren">分享到人人网</string>
    <string name="umeng_socialize_sharetotencent">分享到腾讯微博</string>
    <string name="umeng_socialize_sharetotwitter">分享到twitter</string>
    <string name="umeng_socialize_sharetolinkin">分享到领英</string>
    <string name="yh_xy">山东银丰电子商务有限公司（以下简称“本公司”）按照下列条款与条件提供信息和产品，您在本协议中亦可被称为“用户”，以下所述条款和条件将构成您与本公司，就您使用提供的内容所达成的全部协议（以下称“本协议”）。

说明

本公司向您提供包括但不限于游戏下载、使用、充值、客户服务、游戏资讯、论坛交流等服务（以下称“本服务”）。本公司针对本服务所制定的相关规定，包括但不限于本公司在游戏平台下运营的任何一款游戏所包含的游戏规则、用户处罚条例，客服条例等，以及本公司就账号使用及管理、游戏充值等服务制定的相关服务协议、规则。本公司在此提示用户，请您在使用本服务前详细阅读本协议的所有内容，尤其是免除、限制本公司责任或者限制用户权利的条款（特别是粗体下划线标注的内容），如您对本协议有任何疑问，请向本公司（0531-0808059）进行咨询。一旦您使用本服务，即表示您已阅读并完全同意接受本协议项下所述条款和条件的约束。如果您不同意本协议的任何条款，请您不要使用本服务。未成年人应经其监护人陪同阅读本服务协议并表示同意，方可接受本服务协议。监护人应加强对未成年人的监督和保护，因其未谨慎履行监护责任而损害未成年人利益或者本公司利益的，应由监护人承担责任。

权利声明

1、本公司及其关联公司（关联企业指与本公司存在直接或间接，股权或以协议安排等其他形式的控制与被控制关系，以及对公司运营具有重大影响关系的公司法人）享有并保留以下各项内容完整的、不可分割的所有权及/或知识产权：

（1）游戏平台相关的软件、技术、程序、代码、用户界面等；

（2）本服务相关的商标、图形标记。

2、本公司提供的服务内容中所涉及的游戏，文字、软件、声音、图片、动画、录像、图表等，均受相关知识产权法以及其他相关法律的保护。未经本公司或者其他相关权利人授权，用户不得复制、使用、修改、摘编、翻译、发行,第三方未经本公司及/或其相关权利人的书面许可，不得以任何方式擅自进行使用。

责任限制

1、本公司向用户提供的服务均是在依"现状"提供，本公司在此明确声明对本服务不作任何明示或暗示的保证，包括但不限于对服务的可适用性、准确性、及时性、可持续性等。

2、用户理解并同意自行承担使用本服务的风险，且用户在使用本服务时，应遵循中国法律的相关规定，由于用户行为所造成的任何损害和后果，本公司均不承担除法律有明确规定外的责任。

3、不论在何种情况下，本公司均不对由于网络连接故障、通讯线路、第三方网站、电脑硬件等任何原因给用户造成的任何损失承担除法律有明确规定外的责任。

用户行为规范

1、用户在本网站注册时，不得使用虚假身份信息。用户应当妥善保存其账户信息和密码，由于用户泄密所导致的损失需由用户自行承担。如用户发现他人冒用或盗用其账户或密码，或其账户存在其他未经合法授权使用之情形，应立即以有效方式通知本公司。用户理解并同意本公司有权根据用户的通知、请求或依据判断，采取相应的行动或措施，包括但不限于冻结账户、限制账户功能等，本公司对采取上述行动所导致的损失不承担除法律有明确规定外的责任。

2、用户在使用本服务时须遵守法律法规，不得利用本服务从事违法违规行为，包括但不限于：

（1）发布、传送、传播、储存危害国家安全统一、破坏社会稳定、违反公序良俗、侮辱、诽谤、淫秽、暴力以及任何违反国家法律法规的内容；

（2）发布、传送、传播、储存侵害他人知识产权、商业秘密等合法权利的内容；

（3）恶意虚构事实、隐瞒真相以误导、欺骗他人；

（4）发布、传送、传播广告信息及垃圾信息；

（5）其他法律法规禁止的行为。

3、用户不得利用本服务进行任何有损本公司及其关联企业之权利、利益及商誉，或其他用户合法权利之行为。

4、用户不得基于本服务从事制作、使用、传播“私服”、“外挂”等侵害本公司合法权益的行为。如有违反，本公司将依据中国现行法律法规及本公司的相关规定予以处理。

5、虚拟财产转移服务外，用户不得通过任何方式直接或变相进行游戏账号、游戏币、游戏道具等虚拟财产的转移。

6、用户不得从事作弊等损害游戏公平性的行为。用户承诺接受本公司对其游戏数据进行分析，当本公司发现其数据异常时，本公司可根据自己的独立判断认定其为作弊。

7、用户不得从事任何利用本公司平台系统漏洞进行有损其他用户、本公司或互联网安全的行为。

8、用户知悉并确认，本公司通过公告、邮件、短信、账户通知以及用户在账户中登记的即时通讯工具等方式，向用户发出关于本服务的通知、规则、提示等信息，均为有效通知。该等信息一经公布或发布，即视为已送达至用户。

广告信息和促销

1、用户同意接受本公司通过公告、邮件、短信、账户通知以及用户在账户中登记的即时通讯工具等方式发送的有关本服务，或本公司、本公司之关联企业或与本公司有合作关系的第三方相关的商品、服务促销或其他商业信息。

2、本公司在本服务中可能提供与其他互联网之网站站点或资源的链接，本公司对存在或源于此类网站站点或资源的任何内容、广告、产品或其他资料不予保证或负责；如该链接所载的内容或搜索引擎所提供之链接的内容侵犯用户权利，本公司声明与上述内容无关，且不承担除法律有明确规定外的责任。
</string>
</resources>