<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_solid_corner_small"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical|left"
        android:paddingLeft="12dp"
        android:text="@string/str_exit_title"
        android:textColor="@color/c434343"
        android:textSize="16sp"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/separator_line" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical|left"
        android:paddingLeft="12dp"
        android:text="@string/str_exit_content"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/separator_line" />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/str_ok"
        android:textSize="16sp" />
</LinearLayout>
