<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp12"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp36"
        android:background="@drawable/shape_white_solid_corner_small"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/dp12"
        android:text="@string/orderpay_orderinfo"
        android:textColor="@color/c434343" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp6"
        android:background="@drawable/shape_white_solid_corner_small"
        android:orientation="vertical"
        android:padding="@dimen/dp12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOrderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:textColor="@color/cb5b5b5"
                android:textSize="@dimen/sp12" />

            <TextView
                android:id="@+id/tvOrderTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:textColor="@color/cb5b5b5"
                android:textSize="@dimen/sp12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:text="@string/orderpay_servicetime"
                android:textColor="@color/c434343"
                android:textSize="@dimen/sp12" />

            <TextView
                android:id="@+id/tvServiceTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp6"
                android:gravity="center_vertical|right"
                android:textColor="@color/c434343"
                android:textSize="@dimen/sp12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:text="@string/orderpay_serviceaddress"
                android:textColor="@color/c434343"
                android:textSize="@dimen/sp12" />

            <TextView
                android:id="@+id/tvServiceAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp6"
                android:gravity="center_vertical|right"
                android:textColor="@color/c434343"
                android:textSize="@dimen/sp12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:text="@string/orderpay_serviceask"
                android:textColor="@color/c434343"
                android:textSize="@dimen/sp12" />

            <TextView
                android:id="@+id/tvServiceAsk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp6"
                android:gravity="center_vertical|right"
                android:textColor="@color/c434343"
                android:textSize="@dimen/sp12" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp36"
        android:layout_marginTop="@dimen/dp6"
        android:background="@drawable/shape_white_solid_corner_small"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/order_price"
            android:textColor="@color/c434343" />

        <TextView
            android:id="@+id/tvFinalPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|right"
            android:text="99.99"
            android:textColor="@color/c06b49b" />

    </RelativeLayout>

    <Button
        android:id="@+id/btCancelOrder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp34"
        android:layout_marginBottom="@dimen/dp12"
        android:layout_marginTop="@dimen/dp8"
        android:background="@drawable/shape_green_solid_corner"
        android:gravity="center"
        android:text="取消订单"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp16" />
</LinearLayout>
